refactor: 메시지 관련 기능 수정#342